[gd_scene load_steps=7 format=3 uid="uid://vwlngmcgibha"]

[ext_resource type="Script" path="res://Scripts/Cardv3.gd" id="1_t0a3v"]
[ext_resource type="Texture2D" uid="uid://o42pjo2w4ptk" path="res://asset/img_card.png" id="2_4n3h1"]
[ext_resource type="FontFile" uid="uid://cg53te6wbmn81" path="res://asset/font/1FTV-ZT-Mota-Regular.otf" id="3_qk76a"]
[ext_resource type="Texture2D" uid="uid://c0eljfobf7is6" path="res://asset/sheet.png" id="4_s8y67"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_51ca8"]
size = Vector2(776, 1276)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5ji4"]
atlas = ExtResource("4_s8y67")
region = Rect2(1300, 900, 100, 180)

[node name="Card" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
linear_damp = 2.0
angular_damp = 2.0
script = ExtResource("1_t0a3v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_51ca8")

[node name="Front" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -650.0
offset_right = 400.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 650)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_4n3h1")
expand_mode = 1

[node name="Content" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -355.0
offset_top = -538.0
offset_right = 337.0
offset_bottom = 539.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_qk76a")
theme_override_font_sizes/font_size = 72
text = "Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Back" type="TextureRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -650.0
offset_right = 400.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 650)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_j5ji4")
expand_mode = 1

[node name="btnSelect" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -650.0
offset_right = 400.0
offset_bottom = 650.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(400, 650)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.50003, -5)
scale = Vector2(39.45, 64)

[connection signal="button_down" from="btnSelect" to="." method="_on_btn_select_button_down"]
[connection signal="button_up" from="btnSelect" to="." method="_on_btn_select_button_up"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
